<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">
        <TextView
            android:id="@+id/result"
            android:layout_height="25pt"
            android:textSize="14pt"
            android:padding="4pt"
            android:gravity="right"
            android:text="@string/result_default"
            />
        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="5pt"
            android:id="@+id/tableRow2"
            android:paddingLeft="4pt"
            android:paddingRight="4pt">
            <Button
                android:text="@string/buttonSeven"
                android:textSize="14pt"
                android:id="@+id/button7"
                android:layout_width="25pt"
                android:layout_height="25pt"
                android:layout_weight="1"
                android:onClick="handleClick" />
            <Button
                android:text="@string/buttonEight"
                android:textSize="14pt"
                android:id="@+id/button8"
                android:layout_height="25pt"
                android:layout_width="25pt"
                android:layout_weight="1"
                android:onClick="handleClick" />
            <Button
                android:text="@string/buttonNine"
                android:textSize="14pt"
                android:id="@+id/button9"
                android:layout_width="25pt"
                android:layout_height="25pt"
                android:layout_weight="1"
                android:onClick="handleClick" />
            <Button
                android:text="@string/buttonDivide"
                android:textSize="14pt"
                android:id="@+id/buttonDivide"
                android:layout_width="25pt"
                android:layout_height="25pt"
                android:layout_weight="1"
                android:onClick="handleClick" />
        </TableRow>

    </TableLayout>
</LinearLayout>
